[package]
name = "saga-engine-testing"
description = "Testing utilities for saga-engine - InMemory implementations and test harness"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
test-postgres = [
    "dep:testcontainers",
    "dep:sqlx",
]
test-nats = [
    "dep:testcontainers",
    "dep:async-nats",
]

[dependencies]
# Core saga engine
saga-engine-core = { path = "../core" }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
parking_lot = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true, features = ["serde"] }

# Testing
assert_matches = { workspace = true }

# Testcontainers (optional features)
testcontainers = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
async-nats = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
