[package]
name = "hodei-server-application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
hodei-server-domain = { path = "../domain" }
hodei-shared = { path = "../../shared" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP & Web (para API adapters)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

# Logging & Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
futures = { workspace = true }
