[package]
name = "hodei-server-application"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
lifecycle-management = []

[dependencies]
# Internal dependencies
hodei-server-domain = { path = "../domain" }
hodei-shared = { path = "../../shared" }
# Note: Infrastructure dependencies are not needed for core infrastructure
# Events and repositories are defined in the domain crate

# Async runtime
tokio = { workspace = true }

# Database
sqlx = { workspace = true, features = ["postgres"] }
async-trait = { workspace = true }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
futures = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }

# Scheduling
cron = "0.12"

[dev-dependencies]
tokio-test = { workspace = true }
futures = { workspace = true }
