[package]
name = "hodei-server-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
lifecycle-management = []

[dependencies]
# Core dependencies
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hodei-shared = { path = "../../shared" }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.31"
tracing = { workspace = true }

# Outbox Pattern
sqlx = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
criterion = { workspace = true, default-features = false, features = ["html_reports"] }

[[bench]]
name = "scheduling_benchmarks"
harness = true
