[package]
name = "hodei-server-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
test-utils = []
lifecycle-management = []

[dependencies]
# Internal dependencies
hodei-server-domain = { path = "../domain" }
hodei-server-application = { path = "../application" }
hodei-shared = { path = "../../shared" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Data & Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# External APIs
reqwest = { workspace = true }

# Database
sqlx = { workspace = true }

# Docker client
bollard = { workspace = true }

# Kubernetes client
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Firecracker microVM
hyper = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
http-body-util = { workspace = true }
nix = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# Streams
futures-util = "0.3"
async-stream.workspace = true
futures = "0.3.31"

# NATS JetStream
async-nats = "0.35"

# Scheduling
cron = "0.12"

# Monitoring
prometheus = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Observability (OpenTelemetry)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
tonic = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.15"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
ctor = "0.2"
