[package]
name = "hodei-server-interface"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal crates
hodei-server-domain = { path = "../domain" }
hodei-server-application = { path = "../application" }
hodei-server-infrastructure = { path = "../infrastructure" }
hodei-shared = { path = "../../shared" }
hodei-jobs = { workspace = true } # Proto definitions

# Web (CORS for gRPC-Web only)
tower-http = { workspace = true, features = ["cors"] }
futures = { workspace = true }
http-body-util = { workspace = true }

# gRPC
tonic = { workspace = true }
tonic-web = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }

# Utils
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
prometheus = { workspace = true }
dashmap = "6.1"

# WebSocket
tokio-tungstenite = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

[dev-dependencies]
