[package]
name = "hodei-worker-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
hodei-worker-domain = { path = "../domain" }
hodei-worker-application = { path = "../application" }
hodei-shared = { path = "../../shared" }
hodei-jobs = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

tokio = { workspace = true, features = ["process", "fs", "io-util", "sync", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
hostname = "0.4.2"
num_cpus = "1.16"
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }
rcgen = { workspace = true }
rustls-pemfile = { workspace = true }
tempfile = { workspace = true }
